[package]
name = "todo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }

